# DemoLens-S2

./: .gitignore  README.md  pyproject.toml
demolens_s2/: __init__.py  cli.py  diagnostics.py  errors.py  exporters.py  models.py  normalize.py  pipeline.py
demolens_s2/backends/: __init__.py  base.py  csda_backend.py  demoparser2_backend.py
docs/: demolens_s2_plan.md
