[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "demolens-s2"
version = "0.1.0"
description = "Offline Source 2 demo extraction pipeline"
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "pyarrow",
  "demoparser2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["demolens_s2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

